--- a/index.html
+++ b/index.html
@@ -4,14 +4,63 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="https://www.flaticon.es/iconos-gratis/buscar">
+    <title>Encriptador de texto</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200&display=swap"
+      rel="stylesheet"
+    />
+    
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
-    <textarea cols="10" id="recibirMensaje"> </textarea>
-    <button onclick="encriptarMensaje()">Encriptar Mensaje</button>
-    <button onclick="desencriptarMensaje()">Desencriptar Mensaje</button>
+    <header>
+      <img src="src/img/logo.svg" alt="logo alura" class="logo" />
+    </header>
+    <main>
+      <section>
+        <textarea
+          id="recibirMensaje"
+          cols="30" rows="10"
+          class="recibir_mensaje"
+          placeholder="Ingrese el texto aqui"
+        ></textarea>
+        <div>
+          <h6 class="informacion">❗Solo letras minúsculas y sin acentos</h6>
+        </div>
+        <div class="botones">
+          <button class="btn_encriptar" onclick="encriptarMensaje()">
+            Encriptar
+          </button>
+          <button class="btn_desencriptar" onclick="desencriptarMensaje()">
+            Desencriptar
+          </button>
+        </div>
+      </section>
+      <section>
+        <textarea
+          class="mensaje"
+          cols="20" rows="10"
+          id="darMensaje"
+          cols=""
+        >
+        
+        </textarea>
+        <div id="mensaje_vacio">
+          <p  class="mensaje_vacio">
+            Ningún mensaje fue encontrado
+            <br>
+           Ingresa el texto que desees encriptar o desencriptar.
+          </p>
+        </div>
+        <div>
+          <button class="btn_copiar" onclick="copiarMensaje()">Copiar</button>
+        </div>
+      </section>
+    </main>
 
-    <textarea width="600" height="400" id="darMensaje"> </textarea>
     <script src="src/main.js"></script>
   </body>
 </html>
