se alisto ultimos cambios

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <img src="src/img/logo.svg" alt="logo alura" class="logo" />
     </header>
-    <main>
+    <main class="content">
       <section>
         <div class="textarea-container">
           <textarea
@@ -65,7 +65,15 @@
         </div>
       </section>
     </main>
+        <footer>
+          <div class="redes-sociales">
+          <a href="https://github.com/CuestaSantiago" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/cuesta-santiago/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <p id="anio"></p>
+      </footer>
 
     <script src="src/main.js"></script>
+    <script src="https://kit.fontawesome.com/0782e2ab12.js" crossorigin="anonymous"></script>
   </body>
 </html>
